--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         DOKKU_HOST: ${{ secrets.DOKKU_HOST }}
       run: |
         set -x
+        mkdir -p ~/.ssh
+        ssh-keyscan ${{ secrets.DOKKU_HOST }}>> ~/.ssh/known_hosts
         eval `ssh-agent -s`
         ssh-add - <<< "$SSH_PRIVATE_KEY"
         ssh dokku@$DOKKU_HOST -C "dokku apps:create search-transactions" | true
