--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
         eval `ssh-agent -s`
         ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY}}"
         ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku git:sync --build search-transactions https://github.com/KarmaComputing/search-transactions.git main"
-        ssh dokku@${{ secrets.DOKKU_HOST }} -C "letsencrypt:enable search-transactions"
-        ssh dokku@${{ secrets.DOKKU_HOST }} -C "letsencrypt:cron-job --add"
+        ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku letsencrypt:enable search-transactions"
+        ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku letsencrypt:cron-job --add"
 
