--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
         eval `ssh-agent -s`
         ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY}}"
         ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku git:sync --build search-transactions https://github.com/KarmaComputing/search-transactions.git main"
+        ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku config:set --no-restart search-transactions DOKKU_LETSENCRYPT_EMAIL={{ secrets.DOKKU_LETSENCRYPT_EMAIL }}"
+      
         ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku letsencrypt:enable search-transactions"
         ssh dokku@${{ secrets.DOKKU_HOST }} -C "dokku letsencrypt:cron-job --add"
 
